--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset=utf-8 />
-  <title> Graham's CV</title>
+  <title> Mary's CV</title>
   <link href="media/cv-screen.css" type="text/css" rel="stylesheet" media="screen">
   <link href="media/cv-print.css" type="text/css" rel="stylesheet" media="print">
   <link href="media/academicons.min.css" rel="stylesheet">
